# bowl-of-ramen

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml  tauri.conf.json
app-core/: Cargo.toml
app-core/src/: lib.rs  models.rs  settings.rs  utils.rs
app-macros/: Cargo.toml
app-macros/src/: lib.rs
app/src/: background.rs  commands.rs  constants.rs  fight_simulator.rs  lib.rs  main.rs  misc.rs  mocks.rs  setup_app.rs  window_event_handler.rs
app/src/abstractions/: app_handle.rs  app_window.rs  mod.rs  window_event.rs
app/src/system_tray/: handle_menu_event.rs  handle_tray_icon_event.rs  mod.rs  setup_system_tray.rs
commands/: Cargo.toml  load.rs
commands/src/: load.rs
data/: Cargo.toml
data/src/: lib.rs
data/src/deserializer/: mod.rs
data/src/json/: DefaultSettings.json  mod.rs  models.rs
packet-core/: Cargo.toml
web/: Cargo.toml  index.html  tailwind.config.js
web/src/: app.rs  app_context.rs  main.rs
web/src/api/: mod.rs
web/src/logs/: mod.rs
web/src/meter/: dps_bar.rs  fight_update_example.rs  mod.rs  player_header.rs  player_row.rs
web/src/settings/: mod.rs
web/styles/: main.css  output.css
