[package]
name = "bowl-of-ramen"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
rust-version = "1.82.0"

[lib]
name = "bowl_of_ramen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
debug = true

[dependencies]
tokio = { version = "1.41.0", features = ["rt", "macros"] }
tauri = { version = "2.2.3", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-single-instance = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-log = "2"
window-vibrancy = "0.5.2"
chrono = { version = "0.4.31", features = ["serde"] }
log = "0.4.22"
raw-window-handle = "0.6.2"
rand = "0.8"
anyhow = "1.0.91"
app-core = { path = "../app-core" }
commands = { path = "../commands" }
data = { path = "../data" }

[dev-dependencies]
mockall = "0.11"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
