[package]
name = "bowl-of-ramen-ui"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", features=["event"] }
futures = "0.3.29"
app-core = { path = "../app-core" }
log = "0.4.6"
wasm-logger = "0.2.0"